[gd_scene load_steps=17 format=3 uid="uid://ciqrpd5675boy"]

[ext_resource type="Script" path="res://player/player_3d.gd" id="1_rvo1c"]
[ext_resource type="AudioStream" uid="uid://bhoyegbjust84" path="res://player/sounds/robot_land.wav" id="4_8qkn4"]
[ext_resource type="AudioStream" uid="uid://b4x0f4pgfifoo" path="res://player/sounds/robot_jump.wav" id="5_b5l5h"]
[ext_resource type="Texture2D" uid="uid://do4m5dqo3dix6" path="res://player/crosshair.svg" id="6_vj354"]
[ext_resource type="Shader" path="res://player/dust_shader.gdshader" id="7_p4s3j"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8x2xm"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_s5n07"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_76qk0"]
fractal_octaves = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_s6eib"]
seamless = true
noise = SubResource("FastNoiseLite_76qk0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_at2g5"]
render_priority = 0
shader = ExtResource("7_p4s3j")
shader_parameter/voronoi_sampler = SubResource("NoiseTexture2D_s6eib")

[sub_resource type="Curve" id="Curve_n7pcm"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.2, 0.4), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_ysxwn"]
curve = SubResource("Curve_n7pcm")

[sub_resource type="Curve" id="Curve_3f17x"]
_data = [Vector2(0, 0.5), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_8asvs"]
curve = SubResource("Curve_3f17x")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tqdcj"]
lifetime_randomness = 0.5
direction = Vector3(0, 1, 0)
spread = 90.0
initial_velocity_min = 0.1
initial_velocity_max = 0.25
gravity = Vector3(0, 0.5, 0)
scale_max = 1.4
scale_curve = SubResource("CurveTexture_8asvs")
alpha_curve = SubResource("CurveTexture_ysxwn")
anim_speed_min = 0.01
anim_speed_max = 0.02
anim_offset_max = 1.0

[sub_resource type="QuadMesh" id="QuadMesh_snvpx"]

[node name="Player3D" type="CharacterBody3D"]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
floor_constant_speed = true
script = ExtResource("1_rvo1c")
acceleration = 30.0

[node name="CharacterCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_8x2xm")

[node name="GroundShapeCast" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_s5n07")
target_position = Vector3(0, -2.6, 0)
margin = 0.5
max_results = 1
debug_shape_custom_color = Color(0.658824, 1, 0, 1)

[node name="SkinPivot" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="LandingSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_8qkn4")
volume_db = 1.0

[node name="JumpSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_b5l5h")
volume_db = 1.0

[node name="ShootTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="UserInterface" type="CanvasLayer" parent="."]
visible = false

[node name="Crosshair" type="TextureRect" parent="UserInterface"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_vj354")

[node name="DustParticles" type="GPUParticles3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
material_override = SubResource("ShaderMaterial_at2g5")
emitting = false
amount = 16
explosiveness = 0.05
process_material = SubResource("ParticleProcessMaterial_tqdcj")
draw_pass_1 = SubResource("QuadMesh_snvpx")
